--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Remember the reason why you are following an account on social platforms such as Twitter, Facebook and Instagram.">
   <title>Reason to follow - Browser extension for Google Chrome</title>
   <link href="https://unpkg.com/normalize.min.css@8.0.1/normalize.min.css" rel="stylesheet" />
   <link href="style.css" rel="stylesheet" />
+  <link rel="canonical" href="https://reason-to-follow.github.io">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171527713-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-171527713-1');
+  </script>
 </head>
 
 <body>
