Add hero photo credit

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
           <img class="img-responsive img-product" src="./images/rtf-screenshot-2.png" alt="" />
         </div>
         <div class="footer">
-          <p>&copy; 2020 - All rights reserved</p>
-          <p>Made by <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/jabranr">Jabran Rafique</a>
+          <p>&copy; 2020 - All rights reserved. Made by <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/jabranr">Jabran Rafique</a>
           </p>
+          <p><span>Photo by <a href="https://unsplash.com/@yucelmoran?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Yucel Moran</a> on <a href="https://unsplash.com/s/photos/twitter?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
         </div>
       </div>
     </div>
