add beta testing banner

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       </div>
     </div>
     <div class="right">
+      <a target="_blank" rel="noopener noreferrer" class="beta-tester" href="https://forms.gle/JdMTSzoDPAGcUqHC6">Try as beta tester</a>
       <div class="content">
         <p class="lead"><strong>Reason to follow</strong> is a browser extension that helps you save a reason
           against an account
