--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Reason to follow - Browser extension for Google Chrome</title>
   <link href="https://unpkg.com/normalize.min.css@8.0.1/normalize.min.css" rel="stylesheet" />
   <link href="style.css" rel="stylesheet" />
-  <link rel="canonical" href="https://reason-to-follow.github.io">
+  <link rel="canonical" href="https://jabran.me/reason-to-follow/">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171527713-1"></script>
