--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Remember the reason why you are following an account on social platforms such as Twitter, Facebook and Instagram.">
+  <meta name="description" content="Remember the reason why you are following an account on Twitter">
   <title>Reason to follow - Browser extension for Google Chrome</title>
   <link href="https://unpkg.com/normalize.min.css@8.0.1/normalize.min.css" rel="stylesheet" />
   <link href="style.css" rel="stylesheet" />
   <link rel="canonical" href="https://jabran.me/reason-to-follow/">
 
+  <meta property="og:url" content="https://jabran.me/reason-to-follow/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Reason to follow - Browser extension for Google Chrome" />
+  <meta property="og:image" content="https://jabran.me/reason-to-follow/images/yucel-moran-8cMPxOqkLE8-unsplash.jpg" />
+  <meta property="og:description" content="Remember the reason why you are following an account on Twitter" />
+  
     <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171527713-1"></script>
   <script>
@@ -26,7 +32,7 @@
       <div class="blackout"></div>
       <div class="heading">
         <h1>Reason to follow</h1>
-        <p class="subtitle">Remember the reason why you are following an account on social platforms.</p>
+        <p class="subtitle">Remember the reason why you are following an account on Twitter.</p>
       </div>
     </div>
     <div class="right">
@@ -56,6 +62,7 @@
         </div>
       </div>
     </div>
+    <div class="cookies">This website uses cookies to deliver better user experience.</div>
   </div>
 </body>
 
