update chrome store link

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
           against an account
           profile you follow on Twitter.</p>
         <div>
-          <a target="_blank" rel="noopener noreferrer"
-            href="https://chrome.google.com/webstore/detail/reason-to-follow/fahmecgccgelfhilogafbckhpkiefpac?ref=rtf_webpage">
+          <a target="_blank" rel="noopener noreferrer" href="https://forms.gle/JdMTSzoDPAGcUqHC6">
             <img width="248px" src="./images/ChromeWebStore_BadgeWBorder_v2_496x150.png" alt="" />
           </a>
         </div>
