--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
       <div class="blackout"></div>
       <div class="heading">
         <h1>Reason to follow</h1>
-        <p class="subtitle">Remember the reason why you are following an account on Twitter.</p>
+        <p class="subtitle">Remember the reason to follow an account on social platforms.</p>
       </div>
     </div>
     <div class="right">
       <a target="_blank" rel="noopener noreferrer" class="beta-tester" href="https://forms.gle/JdMTSzoDPAGcUqHC6">Try as beta tester</a>
       <div class="content">
-        <p class="lead"><strong>Reason to follow</strong> is a browser extension that helps you save a reason
-          against an account
-          profile you follow on Twitter.</p>
+        <p class="lead"><strong>Reason to follow</strong> is a browser extension that helps you remember the reason to follow an account on social platforms.</p>
+        <!--
         <div>
           <a target="_blank" rel="noopener noreferrer" href="https://forms.gle/JdMTSzoDPAGcUqHC6">
             <img width="248px" src="./images/ChromeWebStore_BadgeWBorder_v2_496x150.png" alt="" />
           </a>
-        </div>
+        </div> 
+        //-->
         <div class="product-hunt">
           <a href="https://www.producthunt.com/posts/reason-to-follow?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-reason-to-follow" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=212727&theme=light" alt="Reason to follow - Save reason to follow an account on Social media | Product Hunt Embed" style="width: 250px; height: 54px;" width="250px" height="54px" /></a>
         </div>
@@ -53,6 +53,8 @@
           <p>Here are some screenshots</p>
           <img class="img-responsive" src="./images/rtf-screenshot-1.png" alt="" />
           <img class="img-responsive img-product" src="./images/rtf-screenshot-2.png" alt="" />
+          <img class="img-responsive img-product" src="./images/rtf-screenshot-3.png" alt="" />
+          <img class="img-responsive img-product" src="./images/rtf-screenshot-4.png" alt="" />
         </div>
         <div class="footer">
           <p>&copy; 2020 - All rights reserved. Made by <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/jabranr">Jabran Rafique</a>
