add cta direction

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="right">
-      <a target="_blank" rel="noopener noreferrer" class="beta-tester" href="https://forms.gle/JdMTSzoDPAGcUqHC6">Try as beta tester</a>
+      <a target="_blank" rel="noopener noreferrer" class="beta-tester" href="https://forms.gle/JdMTSzoDPAGcUqHC6">Try as beta tester &raquo;</a>
       <div class="content">
         <p class="lead"><strong>Reason to follow</strong> is a browser extension that helps you remember the reason to follow an account on social platforms.</p>
         <!--
