--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       <div class="heading">
         <h1>Reason to follow</h1>
         <p class="subtitle">Remember the reason to follow an account on social platforms.</p>
+        <p>
+          <a target="_blank" rel="noopener noreferrer" class="join-beta-testing" type="button" href="https://forms.gle/JdMTSzoDPAGcUqHC6">Join beta testing &raquo;</a>
+        </p>
       </div>
     </div>
     <div class="right">
